# nAIVE

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CODEX-recommended-refactoring.md  Cargo.toml  GEMINI-recommended-refactoring.md  LICENSE-BSL-1.1  LICENSE-MIT  README.md
.cargo/: config.toml
crates/naive-client/: Cargo.toml
crates/naive-client/src/: anim_system.rs  beautify.rs  cli.rs  command.rs  debug_draw.rs  demos.rs  dev_log.rs  engine.rs  init.rs  input.rs  lib.rs  material.rs  mesh.rs  particles.rs  physics.rs  pipeline.rs  project_config.rs  renderer.rs  scripting.rs  shader.rs  test_runner.rs  world.rs
crates/naive-client/src/pipeline/: compiler.rs  def.rs  executor.rs  mod.rs  resource.rs
crates/naive-core/: Cargo.toml
crates/naive-core/src/: animation.rs  components.rs  events.rs  lib.rs  scene.rs  transform.rs
crates/naive-engine/: Cargo.toml
crates/naive-engine/src/: audio.rs  input.rs  lib.rs  main.rs  publish.rs  reflect.rs  renderer.rs  scripting.rs  shader.rs  splat.rs  watcher.rs  world.rs
crates/naive-runtime/: Cargo.toml
crates/naive-runtime/src/: main.rs
crates/naive-server/: Cargo.toml
crates/naive-server/src/: lib.rs  main.rs
docs/: DEV.LOG.ENGINE.UPDATES.md  DEVLOG.md  Engine Wars_ The AI-Native Challenge - nAIVE vs. Unity 6 & Unreal Engine 5.7.md  GAME_DEVELOPMENT_GUIDE.md  Unity 6 vs. Unreal Engine 5.7_ A Deep Dive into the Latest Tech Demos.md  What nAIVE Needs to Be Taken Seriously_ A Critical Assessment.md  architecture.html  demos.html  nAIVE_Engine_PRD_v1.0.docx  nAIVE_Engine_PRD_v2.0.docx  nAIVE_Engine_PRD_v3.0.md  nAIVE_Engine_PRD_v4.0.md  nAIVE_Engine_PRD_v5.0.md  nAIVE_Platform_PRD_v5.0.md  nAIVEv3.md  whitepaper.md
project/: naive.yaml  project.yaml
project/assets/materials/: blue.yaml  bullet.yaml  chrome.yaml  copper_ring.yaml  dark_floor.yaml  dark_mirror.yaml  default.yaml  enemy.yaml  genesis_core.yaml  goblin.yaml  gold.yaml  inferno_demon.yaml  inferno_floor.yaml  inferno_health.yaml  inferno_iron.yaml  inferno_lava.yaml  inferno_wall.yaml  neon_amber.yaml  neon_blue.yaml  neon_cyan.yaml  neon_gold.yaml  neon_green.yaml  neon_pink.yaml  neon_purple.yaml  neon_white.yaml  obsidian.yaml  pbr_M0_R0.yaml  pbr_M0_R1.yaml  pbr_M0_R2.yaml  pbr_M0_R3.yaml  pbr_M0_R4.yaml  pbr_M1_R0.yaml  pbr_M1_R1.yaml  pbr_M1_R2.yaml  pbr_M1_R3.yaml  pbr_M1_R4.yaml  pbr_M2_R0.yaml  pbr_M2_R1.yaml  pbr_M2_R2.yaml  pbr_M2_R3.yaml  (+29 more)
project/events/: schema.yaml
project/input/: bindings.yaml
project/logic/: ai_asset_turntable.lua  audio_test.lua  ball_collision.lua  combat_demo.lua  combat_enemy.lua  cosmic_camera.lua  door_swing.lua  dreamscape_camera.lua  float_bob.lua  gallery_camera.lua  genesis_camera.lua  genesis_emissive_cycle.lua  genesis_orbit.lua  genesis_pillar_rise.lua  genesis_roughness_sweep.lua  genesis_spark.lua  genesis_sunrise.lua  grid_ui_demo.lua  guardian.lua  inferno_enemy.lua  inferno_lava_glow.lua  inferno_player.lua  neon_pulse.lua  player_fps.lua  relic_pickup.lua  submarine_demo.lua  test_script.lua  third_person_demo.lua  tier25_ccd_demo.lua  tier25_impulse_demo.lua  tier25_materials_demo.lua  tier25_scene_load.lua  tier25_shake_demo.lua  tier2_lifecycle_player.lua  tier2_particle_camera.lua  tier2_pickup_bob.lua  tier2_stress_camera.lua  tier2_stress_spawner.lua  titan_camera.lua  titan_emission_wave.lua  (+8 more)
project/pipelines/: render.yaml
project/scenes/: ai_asset_demo.yaml  audio_test.yaml  combat_demo.yaml  cosmic_splats.yaml  genesis.yaml  grid_ui_demo.yaml  inferno.yaml  neon_dreamscape.yaml  pbr_gallery.yaml  physics_test.yaml  relic.yaml  splat_test.yaml  submarine_demo.yaml  test_scene.yaml  third_person_demo.yaml  tier25_ccd_demo.yaml  tier25_impulse_demo.yaml  tier25_materials_demo.yaml  tier25_scene_load_a.yaml  tier25_scene_load_b.yaml  tier25_shake_demo.yaml  tier2_lifecycle_demo.yaml  tier2_particle_demo.yaml  tier2_stress_test.yaml  titan.yaml  ui_demo.yaml  void.yaml
project/shaders/modules/: camera.slang
project/shaders/passes/: bloom.slang  deferred_light.slang  fxaa.slang  gbuffer.slang  shadow.slang  tonemap.slang  triangle.slang
project/tests/: test_cosmic_splats.lua  test_genesis.lua  test_neon_dreamscape.lua  test_pbr_gallery.lua  test_relic.lua
scripts/: test_generate_asset.js
src/: audio.rs  audio_gen.rs  build.rs  camera.rs  cli.rs  command.rs  components.rs  engine.rs  events.rs  font.rs  input.rs  main.rs  mesh.rs  physics.rs  pipeline.rs  renderer.rs  scene.rs  scripting.rs  shader.rs  splat.rs  test_runner.rs  tween.rs  ui.rs  watcher.rs  world.rs
tools/: telegram_bridge.py
