[workspace]
resolver = "2"
members = [
    "crates/naive-core",
    "crates/naive-client",
    "crates/naive-runtime",
    "crates/naive-server",
]

[workspace.package]
version = "0.1.9"
edition = "2021"

[workspace.dependencies]
# Math
glam = "0.29"

# ECS
hecs = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPU rendering
wgpu = { version = "24", features = ["spirv"] }
winit = "0.30"

# SLANG shader compilation
shader-slang = { version = "0.1" }

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "7"

# Async bridging
pollster = "0.4"

# Byte casting
bytemuck = { version = "1", features = ["derive"] }

# Asset loading
gltf = "1.4"
image = "0.25"
ply-rs = "0.1.3"
linked-hash-map = "0.5.6"

# Physics
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# Audio
kira = "0.9"

# Time
instant = "0.1"

# HTTP client (for submit-log)
ureq = { version = "2", features = ["json"] }

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Async / IPC
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros"] }

# Internal crates
naive-core = { path = "crates/naive-core" }
naive-client = { path = "crates/naive-client" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
